Fix: Add React Router routes to vercel.json for /admin and /presentes

--- a/vercel.json
+++ b/vercel.json
@@ -19,6 +19,14 @@
       "dest": "/server/index.js"
     },
     {
+      "src": "/admin",
+      "dest": "/dist/index.html"
+    },
+    {
+      "src": "/presentes",
+      "dest": "/dist/index.html"
+    },
+    {
       "src": "/(.*)",
       "dest": "/dist/$1"
     }
