--- a/vercel.json
+++ b/vercel.json
@@ -22,5 +22,11 @@
       "src": "/(.*)",
       "dest": "/dist/index.html"
     }
+  ],
+  "rewrites": [
+    {
+      "source": "/((?!api/).*)",
+      "destination": "/index.html"
+    }
   ]
 }
